--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                   type="text"
                   name="username"
                   placeholder="Username"
+                  required
                 />
                 <span class="focus-border"></span>
               </div>
@@ -34,6 +35,7 @@
                   type="email"
                   name="email"
                   placeholder="E-mail"
+                  required
                 />
                 <span class="focus-border"></span>
               </div>
@@ -43,6 +45,7 @@
                   type="password"
                   name="secret"
                   placeholder="Secret Code"
+                  required
                 />
                 <span class="focus-border"></span>
               </div>
@@ -50,15 +53,33 @@
             <div class="test">
               <h1>If you have a dog, what will you do first with him?</h1>
               <div>
-                <input id="radio1" type="radio" name="test" value="eat" />
+                <input
+                  id="radio1"
+                  type="radio"
+                  name="test"
+                  value="eat"
+                  required
+                />
                 <label for="radio1">Eat</label>
               </div>
               <div>
-                <input id="radio2" type="radio" name="test" value="dh" />
+                <input
+                  id="radio2"
+                  type="radio"
+                  name="test"
+                  value="dh"
+                  required
+                />
                 <label for="radio2">I don't have a dog</label>
               </div>
               <div>
-                <input id="radio3" type="radio" name="test" value="dk" />
+                <input
+                  id="radio3"
+                  type="radio"
+                  name="test"
+                  value="dk"
+                  required
+                />
                 <label for="radio3">Difficult to answer</label>
               </div>
             </div>
